# mri_vits

./: .dockerignore  .gitignore  README.md  docker-compose.yml  run_local.sh
backend/: Dockerfile  README.md  pyproject.toml
backend/src/: __init__.py  auth.py  ml_model.py  model_client.py  models.py  schemas.py  task_queue.py
backend/src/core/: config.py  database.py
backend/src/v1/: __init__.py
backend/src/v1/core/: __init__.py
backend/src/v1/routes/: __init__.py  audit.py  images.py  invitations.py  predictions.py  scans.py  users.py  ws.py
frontend/: Dockerfile  README.md  index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: Layout.tsx
frontend/src/components/ui/: Badge.tsx  ConfirmDeleteModal.tsx  Spinner.tsx
frontend/src/hooks/: useAuth.ts
frontend/src/pages/auth/: Invite.tsx  Login.tsx  Register.tsx
frontend/src/pages/dashboard/: Dashboard.tsx
frontend/src/pages/invitations/: NewInvitation.tsx
frontend/src/pages/patients/: NewPatient.tsx  PatientDetail.tsx  Patients.tsx
frontend/src/pages/predictions/: PredictionDetail.tsx  PredictionsList.tsx
frontend/src/pages/scans/: NewScan.tsx
frontend/src/services/api/: auth.service.ts  index.ts  prediction.service.ts
frontend/src/services/http/: http-client.ts
frontend/src/store/: index.ts
frontend/src/store/slices/: authSlice.ts
frontend/src/types/: index.ts
model/: Dockerfile  MODEL_CARD.md  README.md  pyproject.toml  serve.py  setup_test.py  test_gradcam.py  test_inference.py  test_scaling.py  train.py  upload_to_hf.py
